# ProcCL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/: input.ppm
src/: Debug.hpp  Processor.cpp  Processor.h  main.cpp
src/kernels/: blur.cl  saxpy.cl
